Fix error message visiblity

--- a/src/components/Steps/SavingsAvailable/styles.css
+++ b/src/components/Steps/SavingsAvailable/styles.css
@@ -1,6 +1,6 @@
-.error {
+.savingsAvailable-error {
   color: #bfd859;
   font-size: 12px;
   text-align: center;
-  margin-top: 5px;
+  margin: 5px 0 -14px 0;
 }
